--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -18,6 +18,11 @@ h2 {
   line-height: 28px;
   margin: 52px 0 16px;
 }
+h3 {
+  font-size: 17px;
+  font-weight: 600;
+  margin-bottom: 0;
+}
 .blogPost {
   font-size: 17px;
   font-weight: 300;
@@ -251,6 +256,9 @@ table {
     font-size: 21px;
     line-height: 25px;
     margin: 48px 0 16px;
+  }
+  h3 {
+    font-size: 15px;
   }
   .blogPost {
     font-size: 15px;
