--- a/Styles/Pages/Privacy.css
+++ b/Styles/Pages/Privacy.css
@@ -34,11 +34,14 @@ h2 {
   margin-bottom: 17px;
   color: rgb(29, 29, 31);
 }
-.privacyTitleBtn:hover {
+.privacyTitleBtn:hover h2,
+.privacyTitleBtn:hover i {
   color: rgb(0, 102, 204);
 }
 #隱私權保護政策的適用範圍Ｘ {
   font-size: 27px;
+  margin-top: 32.93px;
+  margin-bottom: 32.93px;
   color: rgb(134, 134, 139);
   transition: transform .3s ease;
 }
