--- a/Styles/Pages/Privacy.css
+++ b/Styles/Pages/Privacy.css
@@ -35,7 +35,7 @@ h2 {
   color: rgb(29, 29, 31);
 }
 .privacyTitleBtn:hover h2,
-.privacyTitleBtn:hover i {
+.privacyTitleBtn:hover .bi {
   color: rgb(0, 102, 204);
 }
 #隱私權保護政策的適用範圍Ｘ {
