--- a/Styles/Pages/Privacy.css
+++ b/Styles/Pages/Privacy.css
@@ -34,7 +34,7 @@ h2 {
   margin-bottom: 17px;
   color: rgb(29, 29, 31);
 }
-#隱私權保護政策的適用範圍Ｘ {
+#Privacy1Ｘ, #Privacy2Ｘ, #Privacy3Ｘ, #Privacy4Ｘ, #Privacy5Ｘ, #Privacy6Ｘ, #Privacy7Ｘ {
   font-size: 27px;
   margin-top: 26.93px;
   margin-bottom: 26.93px;
