--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -1,13 +1,26 @@
 body {
   background-color: rgb(245, 245, 247);
 }
-#homeTopAdContainer {
+#homeTopFollowAlertContainer {
   max-width: 980px;
   padding: 16px 0 0;
   transition: all .35s ease;
 }
-.homeTopAd {
+#homeTopFollowAlert {
   border-radius: 10px;
+}
+#homeTopFollowAlertCloseBtn {
+  margin: 0 22px;
+  font-size: 13px;
+  color: rgb(110, 110, 115);
+}
+#homeTopFollowAlertText {
+  margin: 24px 0;
+  font-size: 12px;
+  color: rgb(29, 29, 31);
+}
+#homeTopFollowAlertCloseBtn: hover {
+  color: rgb(29, 29, 31);
 }
 /* 首頁容器 */
 #homeContainer {
