--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -12,14 +12,12 @@ body {
 #homeTopFollowAlertCloseBtn {
   margin: 0 22px;
   font-size: 13px;
-  color: rgb(110, 110, 115);
+	--bs-btn-color: rgb(110, 110, 115);
+  --bs-btn-hover-color: rgb(29, 29, 31);
 }
 #homeTopFollowAlertText {
   margin: 24px 0;
   font-size: 12px;
-  color: rgb(29, 29, 31);
-}
-#homeTopFollowAlertCloseBtn: hover {
   color: rgb(29, 29, 31);
 }
 /* 首頁容器 */
