--- a/Styles/Label.css
+++ b/Styles/Label.css
@@ -1,13 +1,24 @@
 body {
   background-color: rgb(245, 245, 247);
 }
-#labelPageTopAdContainer {
+#labelPageTopFollowAlertContainer {
   max-width: 980px;
   padding: 16px 0 0;
   transition: all .35s ease;
 }
-.labelPageTopAdImg {
+#labelPageTopFollowAlert {
   border-radius: 10px;
+}
+#labelPageTopFollowAlertCloseBtn {
+  margin: 0 22px;
+  font-size: 13px;
+  --bs-btn-color: rgb(110, 110, 115);
+  --bs-btn-hover-color: rgb(29, 29, 31);
+}
+#labelPageTopFollowAlertText {
+  margin: 24px 0;
+  font-size: 12px;
+  color: rgb(29, 29, 31);
 }
 #labelPageContainer {
   max-width: 1020px;
@@ -132,11 +143,11 @@ body {
 }
 /* 螢幕小於 767.98 */
 @media (max-width: 767.98px) {
-  #labelPageTopAdContainer {
+  #labelPageTopFollowAlertContainer {
     width: 87.5%;
     padding: 12px 0 0;
   }
-  .labelPageTopAdImg {
+  #labelPageTopFollowAlert {
     border-radius: 12px;
   }
   #labelPageContainer {
