--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -14,7 +14,7 @@
   --bs-btn-hover-color: rgb(29, 29, 31);
 }
 #blogPostTopFollowAlertText {
-  margin: 24px 0;
+  margin: 24px;
   font-size: 12px;
   color: rgb(29, 29, 31);
 }
