--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -4,6 +4,7 @@
   transition: all .35s ease;
 }
 #blogPostTopFollowAlert {
+  display: flex;
   border-radius: 10px;
   background-color: rgb(245, 245, 247);
 }
@@ -255,6 +256,7 @@ table {
 }
 /* 螢幕小於 1068 */
 @media only screen and (max-width: 1068px) {
+  #blogPostTopFollowAlertContainer,
   #blogPostTopSection,
   #blogPostBottomSection {
     max-width: 616px;
