--- a/Styles/Label.css
+++ b/Styles/Label.css
@@ -2,11 +2,12 @@ body {
   background-color: rgb(245, 245, 247);
 }
 #labelPageTopFollowAlertContainer {
-  max-width: 980px;
-  padding: 16px 0 0;
+  max-width: 1020px;
+  padding: 16px 20px 0;
   transition: all .35s ease;
 }
 #labelPageTopFollowAlert {
+  display: flex;
   border-radius: 10px;
 }
 #labelPageTopFollowAlertCloseBtn {
