--- a/Styles/Label.css
+++ b/Styles/Label.css
@@ -11,7 +11,7 @@ body {
   border-radius: 10px;
 }
 #labelPageTopFollowAlertCloseBtn {
-  margin: 0 22px;
+  margin-right: 20px;
   font-size: 13px;
   --bs-btn-color: rgb(110, 110, 115);
   --bs-btn-hover-color: rgb(29, 29, 31);
