--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -9,7 +9,7 @@
   background-color: rgb(245, 245, 247);
 }
 #blogPostTopFollowAlertCloseBtn {
-  margin: 0 22px;
+  margin-right: 20px;
   font-size: 13px;
   --bs-btn-color: rgb(110, 110, 115);
   --bs-btn-hover-color: rgb(29, 29, 31);
