--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -9,8 +9,9 @@
   background-color: rgb(245, 245, 247);
 }
 #blogPostTopFollowAlertCloseBtn {
-  margin-right: 20px;
   font-size: 13px;
+  margin-right: 20px;
+  -webkit-text-stroke: 1px;
   --bs-btn-color: rgb(110, 110, 115);
   --bs-btn-hover-color: rgb(29, 29, 31);
 }
