--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -152,7 +152,11 @@ table {
   border-radius: 10px;
   background-color: rgb(245, 245, 247);
 }
-#blogPostTopic {
+#blogPostTopicAndDonateHr {
+  padding: 0 36px;
+}
+#blogPostTopic,
+#blogPostDonate {
   padding: 36px;
 }
 #blogPostTopicTitle {
@@ -313,7 +317,11 @@ table {
   #blogPostTopicAndDonate {
     margin: 36px 0;
   }
-  #blogPostTopic [
+  #blogPostTopicAndDonateHr {
+    padding: 0 32px;
+  }
+  #blogPostTopic,
+  #blogPostDonate {
     padding: 32px;
   }
   #blogPostTopicTitle {
