--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -70,6 +70,10 @@ table {
 .syntaxTypeDeclarations {
   color: rgb(1, 99, 140);
 }
+/* 文章中程式碼裡的變數名稱（淺一點的深藍色）*/
+.syntaxOtherDeclarations {
+  color: rgb(5, 124, 175);
+}
 
 /* 文章中程式碼裡的文法預處理器（咖啡色）*/
 .syntaxPreprocessor {
