--- a/Styles/SecondNav.css
+++ b/Styles/SecondNav.css
@@ -2,6 +2,7 @@
 #secondNav {
   height: 50px;
   transition: all .4s ease;
+  backdrop-filter: blur(20px);
   background-color: rgba(255, 255, 255, 0.7);
   -webkit-backdrop-filter: saturate(180%) blur(20px);
 }
