--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -94,7 +94,8 @@ table {
 }
 /* 文章中程式碼裡的方法（紫色）*/
 .syntaxOtherPropertiesAndGlobals,
-.syntaxOtherFunctionAndMethodNames {
+.syntaxOtherFunctionAndMethodNames,
+.syntaxOtherConstants {
   color: rgb(128, 79, 184);
 }
 /* 文章中程式碼裡的文法預處理器（咖啡色）*/
