--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -134,7 +134,7 @@ table {
 .blogPostLaodingImgContainer {
   aspect-ratio: 16/9;
   border-radius: 10px;
-  background-size: 200% 100%;
+  background-size: 200% 100% !important;
   animation: shimmer 2s linear infinite;
   background: #fafafa linear-gradient(to right, #fafafa 0%, #e8e8ed 20%, #fafafa 40%, #fafafa 100%);
 }
@@ -499,6 +499,7 @@ table {
 }
 /* 螢幕小於 454 */
 @media only screen and (max-width: 454px) {
+  .blogPostLaodingImgContainer,
   .blogPostImg {
     border-radius: 0;
   }
