--- a/Styles/Footer.css
+++ b/Styles/Footer.css
@@ -1,30 +1,30 @@
 #footerBrand {
+  color: #515154;
   font-size: 14px;
-  color: rgb(81, 81, 84);
 }
 #footerBrand:hover {
-  color: rgb(29, 29, 31);
+  color: #1d1d1f;
 }
 .breadcrumbItem {
+  color: #424245;
   font-size: 12px;
-  color: rgb(66, 66, 69);
 }
 #wideScreenFooter {
   font-size: 12px;
   line-height: 16px;
 }
 .wideScreenFooterLink {
+  color: #424245;
   font-weight: 350;
   margin-bottom: 9.6px;
-  color: rgb(66, 66, 69);
   --bs-link-hover-color-rgb: 66, 66, 69;
 }
 #smallScreenFooter {
   display: none;
 }
 .smallScreenFooterLink {
+  color: #424245;
   padding: 6px 14px;
-  color: rgb(66, 66, 69);
   --bs-link-hover-color-rgb: 66, 66, 69;
 }
 #bottomFooter {
@@ -32,28 +32,28 @@
   padding-bottom: 21px;
 }
 #wideScreenBottomFooterDivider {
+  color: #d2d2d7;
   margin: 8px 0px 7px;
-  color: rgb(210, 210, 215);
 }
 #wideScreenFooterRegion {
+  color: #6e6e73;
   font-size: 12px;
   font-weight: 300;
   line-height: 16px;
-  color: rgb(110, 110, 115);
 }
 #smallScreenFooterRegion {
   display: none;
+  color: #6e6e73;
   font-size: 12px;
   font-weight: 300;
   margin: 12px 0px;
-  color: rgb(110, 110, 115);
 }
 .bottomFooterLink {
+  color: #424245;
   margin-right: 7px;
   padding-right: 10px;
-  color: rgb(66, 66, 69);
+  --bs-border-color: #86868b;
   --bs-link-hover-color-rgb: 66, 66, 69;
-  --bs-border-color: rgb(134, 134, 139);
 }
 /* 螢幕小於 833 */
 @media only screen and (max-width: 833px) {
