--- a/Styles/Label.css
+++ b/Styles/Label.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(245, 245, 247);
+  background-color: #f5f5f7;
 }
 #labelPageTopFollowAlertContainer {
   max-width: 1020px;
@@ -13,14 +13,14 @@ body {
 #labelPageTopFollowAlertCloseBtn {
   font-size: 13px;
   margin-right: 20px;
+  --bs-btn-color: #6e6e73;
   -webkit-text-stroke: 1px;
-  --bs-btn-color: rgb(110, 110, 115);
-  --bs-btn-hover-color: rgb(29, 29, 31);
+  --bs-btn-hover-color: #1d1d1f;
 }
 #labelPageTopFollowAlertText {
   margin: 24px;
+  color: #1d1d1f;
   font-size: 12px;
-  color: rgb(29, 29, 31);
 }
 #labelPageContainer {
   max-width: 1020px;
@@ -28,12 +28,12 @@ body {
   transition: all .35s ease;
 }
 #labelPageTitle {
+  color: #1d1d1f;
   font-size: 32px;
   margin-top: 8px;
   font-weight: 600;
   line-height: 36px;
   margin-bottom: 24px;
-  color: rgb(29, 29, 31);
 }
 .labelPagePost {
   opacity: 0;
@@ -59,10 +59,10 @@ body {
   width: 50%;
 }
 #labelPageFirstPostTextTitle {
+  color: #1d1d1f;
   font-size: 28px;
   font-weight: 500;
   line-height: 36px;
-  color: rgb(29, 29, 31);
 }
 .labelPagePostImgContainer {
   min-height: 170px;
@@ -87,19 +87,19 @@ body {
   margin-left: 24px;
 }
 #labelPageReadHistoryPostBtn {
+  color: #1d1d1f;
   font-size: 15px;
   margin-top: 32px;
   padding-top: 10px;
   margin-bottom: 80px;
   border-radius: 30px;
   padding-bottom: 9px;
-  color: rgb(29, 29, 31);
   transition: all .3s ease;
-  border: 2px solid rgb(29, 29, 31);
+  border: 2px solid #1d1d1f;
 }
 #labelPageReadHistoryPostBtn:hover {
-  color: rgb(245, 245, 247);
-  background-color: rgb(29, 29, 31);
+  color: #f5f5f7;
+  background-color: #1d1d1f;
 }
 /* 螢幕小於 991.98 */
 @media only screen and (max-width: 991.98px) {
