--- a/Styles/MainNav.css
+++ b/Styles/MainNav.css
@@ -3,15 +3,15 @@
   height: 44px;
   z-index: 1022;
   line-height: 44px;
-  background-color: rgb(243, 243, 243);
+  background-color: #f3f3f3;
   transition: all .35s ease, visibility 0s ease;
 }
 /* 最上方導覽列中的網站標題 */
 .navbar-brand {
   font-weight: 480;
   padding: 0px 10px;
+  --bs-navbar-brand-color: #303030;
   --bs-navbar-brand-font-size: 20px;
-  --bs-navbar-brand-color: rgb(48, 48, 48);
   --bs-navbar-brand-hover-color: black;
 }
 /* 寬螢幕最上方導覽列中的連結容器 */
@@ -21,10 +21,10 @@
 }
 /* 寬螢幕最上方導覽列中的連結 */
 .nav-link {
-  --bs-nav-link-color: rgb(48, 48, 48);
-  --bs-nav-link-hover-color: black;
-  --bs-nav-link-padding-x: 10px;
   --bs-nav-link-padding-y: 0;
+  --bs-nav-link-color: #303030;
+  --bs-nav-link-padding-x: 10px;
+  --bs-nav-link-hover-color: black;
 }
 /* 寬螢幕最上方導覽列中的搜尋表單 */
 #wideScreenSearchForm {
@@ -33,16 +33,16 @@
 }
 /* 寬螢幕最上方導覽列中的搜尋框 */
 #wideScreenSearchBar {
+  color: #333333;
   font-size: 20px;
   font-weight: 300;
   padding-left: 1px;
-  color: rgb(51, 51, 51);
 }
 #wideScreenSearchBar::placeholder {
+  color: #6e6e73;
   font-size: 18px;
   height: 20.87px;
   font-weight: 300;
-  color: rgb(110, 110, 115);
 }
 #wideScreenSearchBar::-webkit-search-cancel-button,
 #wideScreenSearchBar::-webkit-search-results-button {
@@ -50,12 +50,12 @@
 }
 /* 寬螢幕最上方導覽列右方的放大鏡（搜尋時會變叉叉）*/
 #wideScreenSearchBtn {
+  color: #828282;
   font-size: 18px;
   padding: 0px 10px;
-  color: rgb(130, 130, 130);
 }
 #wideScreenSearchBtn .bi-search:hover {
-  color: rgb(102, 102, 102);
+  color: #666666;
 }
 #wideScreenSearchBtn .bi-x-lg:hover {
   color: black;
@@ -70,27 +70,27 @@
 /* 寬螢幕搜尋時的快速連結 */
 .wideScreenSearchQuickLink {
   height: 28px;
+  color: #1d1d1f;
   font-size: 14px;
   margin: 6px -32px;
   line-height: 28px;
   padding-left: 52px;
-  color: rgb(29, 29, 31);
 }
 .wideScreenSearchQuickLink:hover {
-  color: rgb(0, 102, 204);
-  background-color: rgb(245, 245, 247);
+  color: #0066cc;
+  background-color: #f5f5f7;
 }
 /* 寬螢幕搜尋時的暗掉背景 */
 #wideScreenSearchDimBackground {
   display: none;
   z-index: 1021;
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.485);
+  background-color: #0000007c;
 }
 /* 小螢幕最上方導覽列中的選單按鈕 */
 #hamburgerBtn {
   font-size: 26px;
-  --bs-btn-color: rgb(48, 48, 48);
+  --bs-btn-color: #303030;
   --bs-btn-hover-color: black;
 }
 /* 小螢幕展開全螢幕的導覽列 */
@@ -104,23 +104,23 @@
 }
 /* 小螢幕展開全螢幕導覽列的搜尋放大鏡 */
 #smallScreenSearchIcon {
+  color: #a5a5a5;
   font-size: 17px;
   padding: 6px 8px;
-  color: rgb(165, 165, 165);
   transition: all .35s ease;
-  background-color: rgb(215, 215, 215);
+  background-color: #d7d7d7;
 }
 /* 小螢幕展開全螢幕導覽列的搜尋框 */
 #smallScreenSearchBar {
+  color: #333333;
   font-size: 17px;
   font-weight: 250;
   line-height: 21px;
   padding-left: 1px;
-  color: rgb(51, 51, 51);
-  background-color: rgb(215, 215, 215);
+  background-color: #d7d7d7;
 }
 #smallScreenSearchBar::placeholder {
-  color: rgb(110, 110, 115);
+  color: #6e6e73;
 }
 #smallScreenSearchBar::-webkit-search-cancel-button,
 #smallScreenSearchBar::-webkit-search-results-button {
@@ -130,40 +130,40 @@
 #smallScreenSearchCancelBtn {
   width: 0;
   padding: 0;
+  color: #0066cc;
   font-size: 17px;
   font-weight: 300;
   visibility: hidden;
-  color: rgb(0, 102, 204);
   transition: all .35s ease, visibility 0s ease;
 }
 /* 小螢幕展開全螢幕導覽列搜尋中的快速連結標題 */
 #smallScreenSearchQuickLinksTitle {
   height: 0;
   margin: 0px;
+  color: #86868b;
   font-size: 12px;
   font-weight: 250;
   line-height: 16px;
   visibility: hidden;
-  color: rgb(134, 134, 139);
   transition: all .35s ease, visibility 0s ease;
 }
 /* 小螢幕展開全螢幕導覽列的快速連結 */
 .smallScreenSearchQuickLink {
   height: 45px;
+  color: #333333;
   font-size: 17px;
   line-height: 45px;
-  color: rgb(51, 51, 51);
   transition: all .25s ease;
 }
 .smallScreenSearchQuickLink.hoverBlack:hover {
   color: black;
 }
 .smallScreenSearchQuickLink.hoverBlue:hover {
-  color: rgb(40, 151, 255);
+  color: #2897ff;
 }
 /* 小螢幕展開全螢幕導覽列的快速連結分隔線 */
 .quickLinkHr {
-  color: rgb(215, 215, 215);
+  color: #d7d7d7;
   transition: all .35s ease;
 }
 /* 螢幕大於 768：寬螢幕導覽連結顯示 */
